# kronos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml  task.toml
.github/workflows/: rust-check.yml  rust-release.yml  rust.yml
.woodpecker/: rust-check.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_duration.rs  fuzz_toml_parser.rs
overlays/: hardened-musl.nix  hardened_malloc.nix
patches/: 0001-update-libdivide-to-5.2.0.patch  0002-support-gcc-15.patch
src/: alloc.rs  lib.rs  main.rs  task.rs
