[package]
name = "kronos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toml = "0.9.2"

[dependencies.kronos]
path = ".."

[[bin]]
name = "fuzz_parse_duration"
path = "fuzz_targets/fuzz_parse_duration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_toml_parser"
path = "fuzz_targets/fuzz_toml_parser.rs"
test = false
doc = false
bench = false
